--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,10 @@ pluginManagement {
 		mavenCentral()
 		gradlePluginPortal()
 		maven { url "https://repo.spring.io/release" }
+		maven { url "https://repo.spring.io/libs-spring-framework-build" }
+		maven { url "https://oss.jfrog.org/artifactory/oss-snapshot-local" }
+		maven {url 'https://maven.aliyun.com/nexus/content/groups/public/'} // 加上阿里云仓库
+		maven {url 'https://maven.aliyun.com/nexus/content/repositories/jcenter'} // 加上阿里云仓库
 	}
 }
 
